<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Art Adda</string>
    <string name="select_medium_size_brush">Select medium size brush</string>
    <string name="select_small_size_brush">Select small size brush</string>
    <string name="select_large_size_brush">Select large size brush</string>
    <string name="choose_brush_thickness">Choose brush thickness</string>
    <string name="brush">Brush</string>
    <string name="choose_color">Choose color</string>
    <string name="color">Color</string>
    <string name="black">Black</string>
    <string name="brown">Brown</string>
    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="light_green">Light Green</string>
    <string name="dark_green">Dark Green</string>
    <string name="sky_blue">Sky Blue</string>
    <string name="blue">Blue</string>
    <string name="dark_blue">Dark Blue</string>
    <string name="purple">Purple</string>
    <string name="dark_pink">Dark Pink</string>
    <string name="pink">Pink</string>
    <string name="grey">Grey</string>
    <string name="choose_black_color">Choose black color</string>
    <string name="choose_brown_color">Choose brown color</string>
    <string name="choose_red_color">Choose red color</string>
    <string name="choose_orange_color">Choose orange color</string>
    <string name="choose_yellow_color">Choose yellow color</string>
    <string name="choose_green_color">Choose green color</string>
    <string name="choose_dark_green_color">Choose dark green color</string>
    <string name="choose_sky_blue_color">Choose sky blue color</string>
    <string name="choose_blue_color">Choose blue color</string>
    <string name="choose_dark_blue_color">Choose dark blue color</string>
    <string name="choose_purple_color">Choose purple color</string>
    <string name="choose_dark_pink_color">Choose dark pink color</string>
    <string name="choose_pink_color">Choose pink color</string>
    <string name="choose_grey_color">Choose grey color</string>
    <string name="choose_white_color">Choose white color</string>
    <string name="white">White</string>
    <string name="image_in_the_background">Image in the background</string>
    <string name="image">Image</string>
    <string name="choose_background_image">Choose background image</string>
    <string name="undo_what_has_been_done">Undo what has been done</string>
    <string name="undo">Undo</string>
    <string name="redo_what_has_been_undone">Redo what has been undone</string>
    <string name="redo">Redo</string>
    <string name="save_your_drawing">Save your drawing</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="share_the_image_you_created">Share the image you created</string>
    <string name="please_wait">Please wait</string>
</resources>
