<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#DFDFDF">

    <ImageButton
        android:id="@+id/largeBrush"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DFDFDF"
        android:layout_marginHorizontal="2dp"
        android:contentDescription="@string/select_large_size_brush"
        android:minHeight="48dp"
        android:src="@drawable/large_brush_resource">
    </ImageButton>

    <ImageButton
        android:id="@+id/mediumBrush"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginHorizontal="2dp"
        android:background="#DFDFDF"
        android:contentDescription="@string/select_medium_size_brush"
        android:minHeight="48dp"
        android:src="@drawable/medium_brush_resource">
    </ImageButton>

    <ImageButton
        android:id="@+id/smallBrush"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DFDFDF"
        android:layout_marginHorizontal="2dp"
        android:contentDescription="@string/select_small_size_brush"
        android:minHeight="48dp"
        android:src="@drawable/small_brush_resource">
    </ImageButton>

</LinearLayout>